crates/pv-release/tests/snapshots/recipe_metadata__print_backing_recipe_env_mailpit.snap
---
source: crates/pv-release/tests/recipe_metadata.rs
expression: env
---
PV_RESOURCE='mailpit'
PV_TRACK='1'
PV_PLATFORM='darwin-arm64'
PV_UPSTREAM_VERSION='1.30.1'
PV_ARTIFACT_VERSION='1.30.1-pv1'
PV_SOURCE_URL='https://github.com/axllent/mailpit/releases/download/v1.30.1/mailpit-darwin-arm64.tar.gz'
PV_SOURCE_SHA256='1cce392a19a6093fcc859aeb87d9999671fed9a0a7a1c227a7f7df6307741be2'
PV_MINIMUM_PV_VERSION='0.1.0'
PV_PV_BUILD_REVISION='pv1'
