crates/pv-release/tests/snapshots/recipe_metadata__print_composer_recipe_env_rejects_shell_unsafe_source_url.snap
---
source: crates/pv-release/tests/recipe_metadata.rs
expression: "recipe_env_outcome(composer_recipe_env(&composer, \"composer\", \"2\", \"any\"),\ntempdir.path())"
---
Err(
    (
        "InvalidRecipeMetadata",
        "composer.toml",
        "source_url contains shell-unsafe character `&` in value `https://getcomposer.org/download/2.10.1/composer.phar?mirror=primary&fallback=1` for unquoted recipe env output",
    ),
)
