crates/pv-release/tests/snapshots/recipe_metadata__print_recipe_env_php.snap
---
source: crates/pv-release/tests/recipe_metadata.rs
expression: env
---
PV_RESOURCE='php'
PV_TRACK='8.4'
PV_PLATFORM='darwin-arm64'
PV_PHP_VERSION='8.4.20'
PV_UPSTREAM_VERSION='8.4.20'
PV_ARTIFACT_VERSION='8.4.20-pv2'
PV_SOURCE_URL='https://www.php.net/distributions/php-8.4.20.tar.gz'
PV_SOURCE_SHA256='a2def5d534d57c6a0236f2265de7537608af871900a4f7955eff463e9e38247d'
PV_DEPLOYMENT_TARGET='13.0'
PV_DEFAULT_EXTENSIONS='bcmath,curl,ftp,gd,intl,mbstring,openssl,pcntl,pdo_mysql,pdo_pgsql,pdo_sqlite,sockets,sodium,zip'
PV_OPTIONAL_EXTENSIONS='redis,sqlsrv,pdo_sqlsrv,xdebug,apcu,pcov,imagick,mongodb,yaml,rar'
PV_BUILD_EXTENSIONS='bcmath,curl,ftp,gd,intl,mbstring,openssl,pcntl,pdo_mysql,pdo_pgsql,pdo_sqlite,sockets,sodium,zip'
PV_EXPECTED_EXTENSIONS='bcmath,ctype,curl,dom,fileinfo,filter,ftp,gd,hash,iconv,intl,json,libxml,mbstring,openssl,pcntl,pcre,pdo,pdo_mysql,pdo_pgsql,pdo_sqlite,phar,posix,session,simplexml,sockets,sodium,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib'
PV_MINIMUM_PV_VERSION='0.1.0'
PV_PV_BUILD_REVISION='pv2'
